Removed unwanted dependency status:Successfully

--- a/app/src/main/res/layout/expert_suggestion_fragment.xml
+++ b/app/src/main/res/layout/expert_suggestion_fragment.xml
@@ -348,7 +348,7 @@
                                         android:layout_width="32dp"
                                         android:layout_height="32dp"
                                         android:layout_margin="4dp"
-                                        android:src="@drawable/ic_done_white_24dp"
+                                        android:src="@drawable/ic_tick_24"
                                         app:tint="@color/themeBlue" />
 
 
