--- a/app/src/main/res/layout/poem_list_item.xml
+++ b/app/src/main/res/layout/poem_list_item.xml
@@ -7,6 +7,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:minWidth="240dp"
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="8dp"
         app:cardElevation="0dp"
@@ -18,8 +19,9 @@
 
             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/poem_item_image"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="120dp"
                 android:background="@android:color/transparent"
                 android:scaleType="fitXY"
                 app:layout_constraintEnd_toEndOf="parent"
