--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,6 @@
         <item name="colorOnBackground">@color/black</item>
 
 
-
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
 
         <item name="materialButtonStyle">@style/AppTheme.RoundButton</item>
@@ -50,7 +49,6 @@
         <item name="colorOnBackground">@color/black</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
 
 
         <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
@@ -119,10 +117,10 @@
         <item name="textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
         <item name="android:fontFamily">@font/crimson_text_bold</item>
     </style>
-
-
 
 
     <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
@@ -150,8 +148,6 @@
         <item name="fontFamily">@font/montserrat</item>
         <item name="android:textSize">15sp</item>
     </style>
-
-
 
 
     // Edit Text Style
@@ -251,13 +247,12 @@
         <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
 
-<!--    <style name="customTabLayout" parent="Widget.Design.TabLayout">
-        <item name="textAllCaps">false</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="android:fontFamily">@font/crimson_text_bold</item>
-    </style>-->
-
+    <!--    <style name="customTabLayout" parent="Widget.Design.TabLayout">
+            <item name="textAllCaps">false</item>
+            <item name="android:textSize">14sp</item>
+            <item name="android:textColor">@color/black</item>
+            <item name="android:fontFamily">@font/crimson_text_bold</item>
+        </style>-->
 
 
     <style name="MyThemeOverlay.MaterialComponents.MaterialAlertDialog.simple" parent="@style/ThemeOverlay.MaterialComponents.MaterialAlertDialog">
@@ -300,7 +295,6 @@
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">@font/montserrat</item>
     </style>
-
 
 
 </resources>
