--- a/app/src/main/res/drawable/tab_bg_unselected.xml
+++ b/app/src/main/res/drawable/tab_bg_unselected.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:bottom="0dp"
+        android:bottom="1dp"
         android:left="0dp"
-        android:right="5dp"
+        android:right="0dp"
         android:top="0dp">
-        <shape android:shape="rectangle">
-
+        <shape>
             <solid android:color="@android:color/transparent" />
-            <corners android:radius="5dp" />
-            <stroke
-                android:width="1dp"
-                android:color="#1AA6C5" />
         </shape>
     </item>
 </layer-list>
