--- a/app/src/main/res/layout/daily_content_fragment.xml
+++ b/app/src/main/res/layout/daily_content_fragment.xml
@@ -13,13 +13,14 @@
             android:id="@+id/intro_programs_txt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="29dp"
             android:ellipsize="end"
-            android:textStyle="bold"
             android:fontFamily="@font/crimson_text_bold"
             android:maxLines="1"
             android:text="Intro Free Unlock Genius"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -29,7 +30,7 @@
             android:id="@+id/main_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/viedo_container_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -194,14 +195,14 @@
             android:id="@+id/video_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="19dp"
             android:ellipsize="end"
-            android:textStyle="bold"
             android:fontFamily="@font/crimson_text_bold"
             android:maxLines="1"
             android:text="Intro Free Unlock Genius"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="@id/main_container"
             app:layout_constraintRight_toRightOf="@id/main_container"
             app:layout_constraintTop_toBottomOf="@id/main_container" />
@@ -211,7 +212,7 @@
             android:id="@+id/suggestion_txt"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="19dp"
             android:fontFamily="@font/crimson_text_bold"
             android:paddingBottom="4dp"
             android:text="Important Activity"
@@ -221,6 +222,18 @@
             app:layout_constraintLeft_toLeftOf="@id/video_name"
             app:layout_constraintRight_toRightOf="@id/video_name"
             app:layout_constraintTop_toBottomOf="@id/video_name" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/suggestion_play_list"
+            android:layout_width="0dp"
+            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintLeft_toLeftOf="@id/suggestion_txt"
+            app:layout_constraintRight_toRightOf="@id/suggestion_txt"
+            app:layout_constraintTop_toBottomOf="@id/suggestion_txt"
+            tools:listitem="@layout/daily_content_suggestion_item_layout" />
 
 
         <!--<androidx.recyclerview.widget.RecyclerView
@@ -237,17 +250,17 @@
             tools:listitem="@layout/daily_content_suggestion_item_layout" />-->
 
 
-        <include
+        <!--<include
             android:id="@+id/first_video_set"
             layout="@layout/daily_content_suggestion_item_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/suggestion_txt" />
+            app:layout_constraintTop_toBottomOf="@id/suggestion_txt" />-->
 
 
-        <com.google.android.material.button.MaterialButton
+        <!--<com.google.android.material.button.MaterialButton
             android:id="@+id/view_more_video"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -264,7 +277,7 @@
             app:layout_constraintTop_toBottomOf="@id/first_video_set"
             app:rippleColor="#c2e7ff"
             app:strokeColor="@color/darkBlue"
-            app:strokeWidth="2dp" />
+            app:strokeWidth="2dp" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
