--- a/app/src/main/res/layout/daily_content_suggestion_item_layout.xml
+++ b/app/src/main/res/layout/daily_content_suggestion_item_layout.xml
@@ -9,12 +9,63 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:focusable="true">
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/root_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true">
+
+
+            <ImageView
+                android:id="@+id/video_thumbnail"
+                android:layout_width="180dp"
+                android:layout_height="100dp"
+                android:scaleType="fitXY"
+                android:layout_margin="7dp"
+                android:src="@drawable/app_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/video_title"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/video_thumbnail"
+                app:layout_constraintLeft_toRightOf="@id/video_thumbnail"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/video_thumbnail"
+                tools:text="fdjgdkl gjfklhlkf hjgfhklf hjghlf hfghfl hfglhfkl dlkhgfhjgf" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--<androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/blue_bg"
-        android:backgroundTint="#f5f7f9"
+        android:backgroundTint="@color/white"
         android:clickable="true"
         android:focusable="true"
-        android:minHeight="100dp">
-
+        >
+        android:backgroundTint="#f5f7f9"
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/root_layout"
@@ -31,14 +82,12 @@
 
             <ImageView
                 android:id="@+id/video_thumbnail"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
                 android:scaleType="fitXY"
                 android:src="@drawable/app_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.02"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -46,6 +95,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
+                android:drawableEnd="@drawable/ic_back_nav_arrow"
+                android:drawableTint="#838383"
                 android:ellipsize="marquee"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -53,8 +104,6 @@
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
-                android:drawableTint="#838383"
-                android:drawableEnd="@drawable/ic_back_nav_arrow"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +114,7 @@
                 tools:text="Hello ji how are u the fdjkl klgflkhflk hjghklf jhgfhklfg jhgfhkl hfkghklf" />
 
 
-            <!--<ImageButton
+            &lt;!&ndash;<ImageButton
                 android:id="@+id/go_to_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -79,10 +128,10 @@
                 app:layout_constraintHorizontal_bias=".99"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />-->
+                app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>-->
 </layout>
