--- a/app/src/main/res/layout/free_parenting_toolbar_header.xml
+++ b/app/src/main/res/layout/free_parenting_toolbar_header.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent">
+    android:background="@android:color/transparent"
+    app:layout_scrollFlags="scroll|enterAlways">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/topAppBar"
@@ -12,12 +13,14 @@
         android:background="@drawable/round_corner_bottom"
         android:backgroundTint="@color/darkBlue"
         android:minHeight="?attr/actionBarSize"
+        app:layout_scrollFlags="scroll|enterAlways"
         app:navigationIcon="@drawable/nav_bar_icon"
         app:navigationIconTint="@color/white">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|enterAlways">
 
             <TextView
                 android:layout_width="0dp"
