--- a/app/src/main/res/layout/daily_book_layout.xml
+++ b/app/src/main/res/layout/daily_book_layout.xml
@@ -42,6 +42,7 @@
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="3dp"
                         android:background="@color/white"
+                        app:tabRippleColor="@android:color/transparent"
                         app:tabBackground="@drawable/tab_layout"
                         app:tabIndicatorColor="@android:color/transparent"
                         app:tabIndicatorHeight="0dp"
