--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -222,13 +222,15 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/go_to_free_btn"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:text="Free Demo"
                 android:textAllCaps="false"
                 android:textStyle="bold"
+                app:layout_constraintVertical_bias=".8"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/mainLoginButton"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/mainForgotPassword" />
 
