--- a/app/src/main/res/layout/login_parenting_fragment.xml
+++ b/app/src/main/res/layout/login_parenting_fragment.xml
@@ -6,11 +6,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#E0EDFF">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <!--<androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+
 
 
             <ImageView
@@ -124,11 +127,11 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:hint="Country Code"
                 android:textSize="14sp"
-                app:hintTextColor="@color/light_grey_color"
                 app:boxStrokeColor="@color/light_grey_color"
-                android:layout_marginTop="10dp"
+                app:hintTextColor="@color/light_grey_color"
                 app:layout_constraintLeft_toLeftOf="@id/phone_txt"
                 app:layout_constraintRight_toRightOf="@id/user_email_ed_layout"
                 app:layout_constraintTop_toBottomOf="@id/phone_txt">
@@ -206,7 +209,288 @@
                 app:layout_constraintTop_toTopOf="@id/goToDemoDash_board" />
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#E0EDFF">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/back_icon_view_click"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_margin="15dp"
+                app:cardBackgroundColor="#f5f5f5"
+                app:cardCornerRadius="360dp"
+                app:cardElevation="14dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/back_icon_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:src="@drawable/arrow"
+                    android:tint="#8a8a8a"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.cardview.widget.CardView>
+
+
+            <!--<View
+                android:id="@+id/back_icon_view_click"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                app:layout_constraintBottom_toBottomOf="@id/back_icon_image"
+                app:layout_constraintLeft_toLeftOf="@id/back_icon_image"
+                app:layout_constraintRight_toRightOf="@id/back_icon_image"
+                app:layout_constraintTop_toTopOf="@id/back_icon_image" />-->
+
+
+            <TextView
+                android:id="@+id/page_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="80dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Unlock the best kept parenting secrete now!"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@id/back_icon_view_click"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/back_icon_view_click" />
+
+
+            <TextView
+                android:id="@+id/page_desc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Please fill the Following information"
+                android:textColor="#868686"
+                app:layout_constraintLeft_toLeftOf="@id/page_title"
+                app:layout_constraintRight_toRightOf="@id/page_title"
+                app:layout_constraintTop_toBottomOf="@id/page_title" />
+
+
+            <TextView
+                android:id="@+id/user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/crimson_text_bold"
+                android:text="Name"
+                android:textColor="@color/light_grey_color"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@id/page_desc"
+                app:layout_constraintTop_toBottomOf="@id/page_desc" />
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/user_name_ed2_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
+                app:boxBackgroundColor="@color/white"
+                app:boxCornerRadiusBottomEnd="4dp"
+                app:boxCornerRadiusBottomStart="4dp"
+                app:boxCornerRadiusTopEnd="4dp"
+                app:boxCornerRadiusTopStart="4dp"
+                app:boxStrokeColor="@color/light_grey_color"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/black"
+                app:layout_constraintLeft_toLeftOf="@id/user_name"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/user_name">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/user_name_ed2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:inputType="textPersonName"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColor="@color/black" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <TextView
+                android:id="@+id/user_email"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/crimson_text_bold"
+                android:text="Email"
+                android:textColor="@color/light_grey_color"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@id/user_name_ed2_layout"
+                app:layout_constraintRight_toRightOf="@id/user_name_ed2_layout"
+                app:layout_constraintTop_toBottomOf="@id/user_name_ed2_layout" />
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/email_id_ed_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_marginTop="10dp"
+                app:boxBackgroundColor="@color/white"
+                app:boxCornerRadiusBottomEnd="4dp"
+                app:boxCornerRadiusBottomStart="4dp"
+                app:boxCornerRadiusTopEnd="4dp"
+                app:boxCornerRadiusTopStart="4dp"
+                app:boxStrokeColor="@color/light_grey_color"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/black"
+                app:layout_constraintLeft_toLeftOf="@id/user_email"
+                app:layout_constraintRight_toRightOf="@id/user_email"
+                app:layout_constraintTop_toBottomOf="@id/user_email">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/email_id_ed"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:inputType="textEmailAddress"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColor="@color/black" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <TextView
+                android:id="@+id/phone_txt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/montserrat"
+                android:text="Phone Number"
+                android:textColor="@color/light_grey_color"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@id/email_id_ed_layout"
+                app:layout_constraintRight_toRightOf="@id/email_id_ed_layout"
+                app:layout_constraintTop_toBottomOf="@id/email_id_ed_layout" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/country_code_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:hint="Country Code"
+                android:textSize="14sp"
+                app:boxCornerRadiusBottomEnd="4dp"
+                app:boxCornerRadiusBottomStart="4dp"
+                app:boxCornerRadiusTopEnd="4dp"
+                app:boxCornerRadiusTopStart="4dp"
+                app:boxStrokeColor="@color/light_grey_color"
+                app:hintTextColor="@color/light_grey_color"
+                app:layout_constraintLeft_toLeftOf="@id/phone_txt"
+                app:layout_constraintRight_toRightOf="@id/phone_txt"
+                app:layout_constraintTop_toBottomOf="@id/phone_txt">
+
+                <AutoCompleteTextView
+                    android:id="@+id/country_code_ed"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="none"
+                    android:text="Country Code" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/user_phone_ed_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                android:layout_height="55dp"
+                android:layout_marginTop="10dp"
+                app:boxBackgroundColor="@color/white"
+                app:boxCornerRadiusBottomEnd="4dp"
+                app:boxCornerRadiusBottomStart="4dp"
+                app:boxCornerRadiusTopEnd="4dp"
+                app:boxCornerRadiusTopStart="4dp"
+                app:boxStrokeColor="@color/light_grey_color"
+                app:endIconMode="clear_text"
+                app:endIconTint="@color/black"
+                app:layout_constraintLeft_toLeftOf="@id/phone_txt"
+                app:layout_constraintRight_toRightOf="@id/country_code_layout"
+                app:layout_constraintTop_toBottomOf="@id/country_code_layout">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/user_phone_ed"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/montserrat"
+                    android:inputType="phone"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColor="@color/black" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/goToDemoDash_board"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp"
+                android:layout_marginBottom="8dp"
+                android:backgroundTint="@color/gradientCarouselIndicatorStartColor"
+                android:elevation="5dp"
+                android:fontFamily="@font/crimson_text_bold"
+                android:paddingStart="76dp"
+                android:paddingTop="16dp"
+                android:paddingEnd="76dp"
+                android:paddingBottom="17dp"
+                android:text="Login"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:cornerRadius="5dp"
+                app:layout_constraintVertical_bias=".5"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/user_phone_ed_layout"
+                app:strokeColor="@color/gradientStartColor"
+                app:strokeWidth="1dp" />
+
+
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/pb_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:visibility="gone"
+                app:indicatorColor="@color/darkBlue"
+                app:layout_constraintBottom_toBottomOf="@id/goToDemoDash_board"
+                app:layout_constraintLeft_toLeftOf="@id/goToDemoDash_board"
+                app:layout_constraintRight_toRightOf="@id/goToDemoDash_board"
+                app:layout_constraintTop_toTopOf="@id/goToDemoDash_board" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </ScrollView>
 </layout>
