--- a/app/src/main/res/drawable/tab_bg_selected.xml
+++ b/app/src/main/res/drawable/tab_bg_selected.xml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp"
-        android:bottom="0dp">
+    <item>
         <shape android:shape="rectangle">
-            <solid
-                android:color="#1AA6C5"/>
-
+            <solid android:color="#1AA6C5" />
             <corners android:radius="360dp" />
-            <stroke
-                android:width="2dp"
-                android:color="#1AA6C5"
-                />
         </shape>
     </item>
 </layer-list>
