--- a/app/src/main/res/layout/daily_book_layout.xml
+++ b/app/src/main/res/layout/daily_book_layout.xml
@@ -41,11 +41,11 @@
                         android:layout_marginStart="3dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="3dp"
-                        android:background="@color/white"
-                        app:tabRippleColor="@android:color/transparent"
-                        app:tabBackground="@drawable/tab_layout"
-                        app:tabIndicatorColor="@android:color/transparent"
-                        app:tabIndicatorHeight="0dp"
+                        app:tabIndicatorHeight="48dp"
+                        app:tabRippleColor="#c2e7ff"
+                        app:tabIndicatorFullWidth="true"
+                        app:tabIndicator="@drawable/tab_bg_selected"
+                        app:tabIndicatorColor="#1AA6C5"
                         app:tabMode="scrollable"
                         app:tabSelectedTextColor="@color/white"
                         app:tabTextAppearance="@style/customTabLayout"
