Removed some Bug from Daily Book Fragment from code

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -118,6 +118,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAlignment">center</item>
+        <item name="android:singleLine">true</item>
         <item name="android:gravity">center</item>
         <item name="android:fontFamily">@font/crimson_text_bold</item>
     </style>
