--- a/app/src/main/res/layout/purchase_plan_tabs_fragments.xml
+++ b/app/src/main/res/layout/purchase_plan_tabs_fragments.xml
@@ -8,6 +8,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cancel_icon_view_click"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_margin="15dp"
+            app:cardBackgroundColor="#f5f5f5"
+            app:cardCornerRadius="360dp"
+            app:cardElevation="14dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/back_icon_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/ic_cancel"
+                android:tint="#8a8a8a"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.cardview.widget.CardView>
+
         <ImageView
             android:id="@+id/course_icon_image"
             android:layout_width="match_parent"
@@ -79,6 +104,7 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buy_btn"
             android:layout_width="0dp"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
