--- a/app/src/main/res/navigation/free_parenting_navgraph.xml
+++ b/app/src/main/res/navigation/free_parenting_navgraph.xml
@@ -23,10 +23,19 @@
         android:id="@+id/DailyBookFragment"
         android:name="com.uptodd.uptoddapp.ui.freeparenting.daily_book.DailyBookFragment"
         android:label="DailyBookFragment"
-        tools:layout="@layout/daily_book_layout" />
+        tools:layout="@layout/daily_book_layout" >
+        <action
+            android:id="@+id/action_DailyBookFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+    </fragment>
     <fragment
         android:id="@+id/purchaseCoursePlan"
         android:name="com.uptodd.uptoddapp.ui.freeparenting.purchase.PurchasePlanTabContainerFragment"
         android:label="purchase_plan_course"
         tools:layout="@layout/purchase_plan_content_layout" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.uptodd.uptoddapp.ui.freeparenting.profile.ProfileFragment"
+        android:label="profile_layout_fragment"
+        tools:layout="@layout/profile_layout_fragment" />
 </navigation>
