--- a/app/src/main/res/layout/purchase_plan_content_layout.xml
+++ b/app/src/main/res/layout/purchase_plan_content_layout.xml
@@ -17,7 +17,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <androidx.viewpager2.widget.ViewPager2
+                <FrameLayout
                     android:id="@+id/view_pager_paid_content"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
