Added profile details status:Successfully

--- a/app/src/main/res/layout/free_parenting_toolbar_header.xml
+++ b/app/src/main/res/layout/free_parenting_toolbar_header.xml
@@ -36,10 +36,10 @@
                     android:textSize="19sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/account_icon"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <!--<androidx.appcompat.widget.AppCompatImageButton
+                <androidx.appcompat.widget.AppCompatImageButton
                     android:id="@+id/account_icon"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
@@ -52,7 +52,7 @@
                     android:visibility="gone"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />-->
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.appbar.MaterialToolbar>
 
