--- a/app/src/main/res/layout/profile_layout_fragment.xml
+++ b/app/src/main/res/layout/profile_layout_fragment.xml
@@ -20,6 +20,7 @@
                 app:layout_scrollFlags="scroll|enterAlways" />
 
             <androidx.core.widget.NestedScrollView
+                android:id="@+id/profile_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
@@ -227,34 +228,55 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/update_info_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="100dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:elevation="5dp"
+                        android:fontFamily="@font/montserrat"
+                        android:paddingTop="13dp"
+                        android:paddingBottom="13dp"
+                        android:text="Update Details"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="13sp"
+                        android:textStyle="bold"
+                        app:backgroundTint="@color/gradientCarouselIndicatorStartColor"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/user_phone_ed_layout"
+                        app:rippleColor="#6cc1d7"
+                        app:strokeColor="@color/gradientCarouselIndicatorStartColor"
+                        app:strokeWidth="1dp" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.core.widget.NestedScrollView>
 
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/update_info_btn"
-                android:layout_width="match_parent"
+            <ProgressBar
+                android:id="@+id/progress_for_profile"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="20dp"
-                android:elevation="5dp"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/loading_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="90dp"
                 android:fontFamily="@font/montserrat"
-                android:paddingTop="13dp"
-                android:paddingBottom="13dp"
-                android:text="Update Details"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="13sp"
+                android:textColor="@color/black"
                 android:textStyle="bold"
-                app:backgroundTint="@color/gradientCarouselIndicatorStartColor"
-                app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
-                app:rippleColor="#6cc1d7"
-                app:strokeColor="@color/gradientCarouselIndicatorStartColor"
-                app:strokeWidth="1dp" />
+                android:visibility="gone" />
+
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
