--- a/app/src/main/res/layout/free_parenting_baby_edit_profile_fragment.xml
+++ b/app/src/main/res/layout/free_parenting_baby_edit_profile_fragment.xml
@@ -85,7 +85,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:fontFamily="@font/montserrat"
-                        android:text="testing image"
+                        android:text="N/A"
                         android:textColor="#595958"
                         android:textSize="17sp"
                         android:textStyle="bold"
